Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.title>"
+       "<method 'title' of 'str' objects>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = \"art vandelay\" # 'Art Vandelay'\n",
-    "name.title"
+    "str.title"
    ]
   },
   {
