--- a/index.ipynb
+++ b/index.ipynb
@@ -218,8 +218,7 @@
     }
    ],
    "source": [
-    "name = \"art.vandelay@vandelay.co\" # False\n",
-    "name.false(.com)"
+    "name = \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
