--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "name = 'vandelay.com' # 'www.vandelay.com'\n",
+    "\"\""
    ]
   },
   {
