--- a/index.ipynb
+++ b/index.ipynb
@@ -205,11 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith('.com\") # False"
+    "\"art.vandelay@vandelay.co\".endswith('.com') # False"
    ]
   },
   {
